# functional-fractal-tree

./: README.md  fractal-tree.cabal
app/: Main.hs
src/: FractalTree.hs
test/: DocTests.hs
