name:                fractal-tree
version:             0.1.0.0
-- synopsis:
-- description:
homepage:
license:             BSD3
license-file:        LICENSE
author:              Gautier DI FOLCO
maintainer:          example@example.com
copyright:           2017 Gautier DI FOLCO
category:            Kata
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FractalTree
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck >= 2.9
  default-language:    Haskell2010

executable fractal-tree-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , fractal-tree
  default-language:    Haskell2010

test-suite doctest
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        DocTests.hs
    build-depends:  base
                  , fractal-tree
                  , doctest >= 0.11.3
